--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             const password = document.getElementById("regPassword").value;
 
             try {
-                const response = await fetch("/api/register", {
+                const response = await fetch("https://ai-graderv3.onrender.com/api/register", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
@@ -243,7 +243,7 @@
             const password = document.getElementById("password").value;
 
             try {
-                const response = await fetch("/api/login", {
+                const response = await fetch("https://ai-graderv3.onrender.com/api/login", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
@@ -274,103 +274,53 @@
             document.getElementById("studentFileName").textContent = e.target.files[0]?.name || "No file chosen";
         });
 
-        // Upload Answer Key
+        // Upload answer key
         document.getElementById("answerKeyForm").onsubmit = async (e) => {
             e.preventDefault();
             const formData = new FormData();
             formData.append("file", document.getElementById("answerKey").files[0]);
 
-            document.getElementById("responseResult").innerHTML = `<p>Uploading answer key...</p>`;
-
             try {
-                const response = await fetch("/api/upload_answer_key/", {
+                const response = await fetch("https://ai-graderv3.onrender.com/api/upload-answer-key", {
                     method: "POST",
                     body: formData,
                 });
 
                 const result = await response.json();
-                console.log(result);
-
-                document.getElementById("responseResult").innerHTML = `
-                    <div class="result-section">
-                        <h3>Answer Key Uploaded</h3>
-                        <p>Filename: ${result.filename}</p>
-                        <p>Message: ${result.message}</p>
-                    </div>
-                `;
+                if (response.ok) {
+                    alert("Answer Key uploaded successfully!");
+                } else {
+                    alert(result.detail || "Upload failed");
+                }
             } catch (err) {
-                console.error("Error uploading answer key:", err);
-                document.getElementById("responseResult").innerHTML = `
-                    <div class="result-section">
-                        <p style="color:red;">Failed to upload answer key. Check server or console.</p>
-                    </div>
-                `;
+                console.error("Error during file upload:", err);
+                alert("Upload failed. Please try again.");
             }
         };
 
-        // Upload Student Assignment
+        // Upload student file
         document.getElementById("studentFileForm").onsubmit = async (e) => {
             e.preventDefault();
-            if (!currentUserId) {
-                alert("Please login first");
-                return;
-            }
-
             const formData = new FormData();
             formData.append("file", document.getElementById("studentFile").files[0]);
             formData.append("user_id", currentUserId);
 
-            document.getElementById("responseResult").innerHTML = `
-                <div class="result-section">
-                    <p>Uploading student assignment...</p>
-                </div>
-            `;
-
             try {
-                const response = await fetch("/api/upload/", {
+                const response = await fetch("https://ai-graderv3.onrender.com/api/upload-student-assignment", {
                     method: "POST",
                     body: formData,
                 });
 
                 const result = await response.json();
-                
-                if (result.error) {
-                    throw new Error(result.error);
+                if (response.ok) {
+                    alert("Student file uploaded and graded successfully!");
+                    document.getElementById("responseResult").innerHTML = `<div class="score-display">Grade: ${result.score}</div>`;
+                } else {
+                    alert(result.detail || "Upload failed");
                 }
-
-                if (!result.comparison_result) {
-                    throw new Error("No comparison result available");
-                }
-
-                document.getElementById("responseResult").innerHTML = `
-                    <div class="result-section">
-                        <h3>Student Assignment Comparison Result</h3>
-                        <p>Filename: ${result.filename}</p>
-                        <div class="score-display">
-                            <strong>Comparison Score:</strong> ${result.comparison_result.similarity_score}
-                        </div>
-                        <p><strong>Message:</strong> ${result.comparison_result.message}</p>
-                        <details>
-                            <summary>View Extracted Text</summary>
-                            <pre>${result.extracted_text}</pre>
-                        </details>
-                    </div>
-                `;
             } catch (err) {
-                console.error("Error uploading student file:", err);
-                document.getElementById("responseResult").innerHTML = `
-                    <div class="result-section">
-                        <h3 style="color:red;">Upload Failed</h3>
-                        <p style="color:red;">Error: ${err.message}</p>
-                        <p style="color:red;">Please check if:</p>
-                        <ul style="color:red;">
-                            <li>The answer key has been uploaded first</li>
-                            <li>You are logged in</li>
-                            <li>The file is a supported format (.docx or .pdf)</li>
-                            <li>The database is running and accessible</li>
-                        </ul>
-                    </div>
-                `;
+                console.error("Error during file upload:", err);
+                alert("Upload failed. Please try again.");
             }
         };
     </script>
