--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             const password = document.getElementById("regPassword").value;
 
             try {
-                const response = await fetch("http://34.45.104.170/api/register", {
+                const response = await fetch("http://34.45.104.170:8000/api/register", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
@@ -243,7 +243,7 @@
             const password = document.getElementById("password").value;
 
             try {
-                const response = await fetch("http://34.45.104.170/api/login", {
+                const response = await fetch("http://34.45.104.170:8000/api/login", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
@@ -281,7 +281,7 @@
             formData.append("file", document.getElementById("answerKey").files[0]);
 
             try {
-                const response = await fetch("http://34.45.104.170/api/upload_answer_key/", {
+                const response = await fetch("http://34.45.104.170:8000/api/upload_answer_key/", {
                     method: "POST",
                     body: formData,
                 });
@@ -306,7 +306,7 @@
             formData.append("user_id", currentUserId);
 
             try {
-                const response = await fetch("http://34.45.104.170/api/upload/", {
+                const response = await fetch("http://34.45.104.170:8000/api/upload/", {
                     method: "POST",
                     body: formData,
                 });
