--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             const password = document.getElementById("password").value;
 
             try {
-                const response = await fetch("https://ai-graderv3.onrender.com/api/login/", {
+                const response = await fetch("https://ai-graderv3.onrender.com/api/login", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
